--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <h1>Posições do voleibol</h1>
         <img src="Jogadoras de volei" alt="">
     </header>
+    <section class="section1">
+        <h2>section 1</h2>
+    </section>
+    <section class="section2">
+        <h3>section 2</h3>
+    </section>
     
 </body>
 </html>
