--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <img src="Jogadoras de volei" alt="">
     </header>
     <section class="section1">
-        <h2>section 1</h2>
+        <img src="Carolana.jpg" alt="Carolana">
+        <h2>Carolana</h2>
     </section>
     <section class="section2">
-        <h3>section 2</h3>
+        <img src="Thaisa.jpg" alt="Thaísa">
+        <h3>Thaísa</h3>
     </section>
     
 </body>
