--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <img src="Thaisa.jpg" alt="Thaísa">
         <h3>Thaísa</h3>
     </section>
+
+    <footer>
+        <img src="" alt="">
+        <p>Seleção feminina de Volei</p>
+    </footer>
     
 </body>
 </html>
