--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h3>Thaísa</h3>
     </section>
 
-    <footer>
-        <img src="" alt="">
+    <footer class="rodape">
+        <img src="selecao.jpg" alt="seleção">
         <p>Seleção feminina de Volei</p>
     </footer>
     
